# memento

./: .dockerignore  .env.example  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  demo_graph.html  demo_graph.py  demo_graph_simple.py  docker-compose.yml  pirate_game.html  pirate_game.py  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  start-inspector.sh
.gemini/commands/: speckit.plan.toml
.github/workflows/: auto-tag.yml  publish.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Documentation/: GLOSSARY.md  data-model.md  detailed-architecture.md  known-tech-debt.md  mcp-tool-specification.md  sample-use-cases.md
Documentation/ADR/: ADR-001-choose-mcp-sdk.md  ADR-002-choose-database.md  ADR-003-switch-to-neo4j-graph-rag.md  ADR-004-remove-mongodb.md  ADR-005-no-langchain.md  ADR-006-leverage-client-llm.md  ADR-007-container-setup.md  choose-mcp-sdk.md
Documentation/legacy/: AGENTS.md  data-model.md  mcp-tool-specification.md
Documentation/misc/: docker-setup-for-integration-tests.md  multi-agent-speckit-setup.md  planning.md  power-user-guide.md
Documentation/strategic-planning/: AGENTS.md  dev-loop-strategy.md
Documentation/test-instructions/: container-testing-instructions.md
prototype/kg-demo/: README.md  graph.cypher  graph.json  graph.mmd  interactive_graph.html  knowledge_graph_demo.py  mobile.html
specs/001-baseline-rag/: data-model.md  handoff.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-container-setup/: data-model.md  feedback.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-container-polish-devloop/: data-model.md  plan.md  research.md  spec.md  tasks.md  verification.md
specs/004-tier1-integration-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/embeddings/: base.py  local_embedding_provider.py
src/graph/: base.py  neo4j.py
src/mcp/: server.py
src/memory/: service.py
src/models/: __init__.py  memory.py  user.py
src/utils/: config.py  factory.py
(+50 files in other folders)
